--- a/indoor.html
+++ b/indoor.html
@@ -40,7 +40,7 @@
             <sound src="assets/indoor4soundscape.mp3" id="soundscape"></sound>
         </a-assets>
         <a-sky src="#360photo"></a-sky>
-        <a-entity position="0 1.8 -1" text="value: look behind you;
+        <a-entity position="0 1.8 -1" text="value: look around you;
         color: #DDDDDD;
         align: center;
         wrapCount: 10;
