--- a/nighttime.html
+++ b/nighttime.html
@@ -40,7 +40,7 @@
             <sound src="assets/nightscenesoundscape.mp3" id="nightsoundscape"></sound>
         </a-assets>
         <a-sky src="#360photo"></a-sky>
-        <a-entity position="0 1.8 -1" text="value: look around;
+        <a-entity position="0 1.8 -1" text="value: let your mind enter this space;
         color: #DDDDDD;
         align: center;
         wrapCount: 10;
