--- a/white.html
+++ b/white.html
@@ -41,7 +41,7 @@
             <sound src="assets/whitesoundscape.mp3" id="soundscape"></sound>
         </a-assets>
         <a-sky src="#360photo"></a-sky>
-        <a-entity position="0 1.8 -1" text="value: look around;
+        <a-entity position="0 1.8 -1" text="value: have you been here before?;
         color: #DDDDDD;
         align: center;
         wrapCount: 10;
