--- a/enter.html
+++ b/enter.html
@@ -43,10 +43,10 @@
             <img src="assets/indoor6.jpg" id="indoor">
         </a-assets>
         <a-sky src="#360photo"></a-sky>
-        <a-entity text-entity position="0 1.8 -1" text="value: enter this space;
+        <a-entity text-entity position="0 1.8 -1" text="value: enter my liminal mind / headphones recommended / click on center text to advance;
         color: #DDDDDD;
         align: center;
-        wrapCount: 10;
+        wrapCount: 15;
         width: 0.5" event-set__down="_event: mousedown; visible: true"
             geometry="primitive: plane; width: auto; height: auto"
             material="color: #DDDDDD; shader: flat; visible: false">
@@ -54,7 +54,7 @@
         <!--<a-link href="indoor.html" image="indoor6.1.jpg" title="click"></a-link>-->
         <a-entity link="href: indoor.html; title: My Homepage; image: #indoor"></a-entity>
         <a-box box-item color="#FFAA00" event-set__down="_event: mousedown; color: #FF1100" position="0 1.8 -1"
-            size="10" material="visible: false"></a-box>
+            height="0.3" width="0.3" material="visible: false"></a-box>
         <a-entity id="blacksound" geometry="primitive: plane" position="-10 0 0"
             sound="src: assets/houses.mp3; autoplay: true; loop: true;"></a-entity>
     </a-scene>
