--- a/nighttime.html
+++ b/nighttime.html
@@ -40,7 +40,7 @@
             <sound src="assets/nightscenesoundscape.mp3" id="nightsoundscape"></sound>
         </a-assets>
         <a-sky src="#360photo"></a-sky>
-        <a-entity position="0 1.8 -1" text="value: let your mind enter this space;
+        <a-entity position="0 1.8 -1" text="value: right now you exist in this space;
         color: #DDDDDD;
         align: center;
         wrapCount: 10;
@@ -48,7 +48,7 @@
             material="color: #DDDDDD; shader: flat; visible: false"> </a-entity>
         <!--<a-link href="white.html" title="click"></a-link>-->
         <a-box box-item color="#FFAA00" event-set__down="_event: mousedown; color: #FF1100" position="0 1.8 -1"
-            size="10" material="visible: false"></a-box>
+            height="0.3" width="0.3" material="visible: false"></a-box>
         <a-entity id="nightsound" geometry="primitive: plane" position="-10 0 0"
             sound="src: assets/nightscenesoundscape.mp3; autoplay: true; loop: true;"></a-entity>
         <a-entity id="nightvoice" geometry="primitive: plane" material="visible:false" position="10 0 -5"
