--- a/white.html
+++ b/white.html
@@ -49,7 +49,7 @@
             material="color: #DDDDDD; shader: flat; visible: false"> </a-entity>
         <!--<a-link href="end.html" title="click"></a-link>-->
         <a-box box-item color="#FFAA00" event-set__down="_event: mousedown; color: #FF1100" position="0 1.8 -1"
-            size="10" material="visible: false"></a-box>
+            height="0.3" width="0.3" material="visible: false"></a-box>
         <a-entity id="whitesound" geometry="primitive: plane" position="-10 0 0"
             sound="src: assets/whitesoundscape.mp3; autoplay: true; loop: true;"></a-entity>
         <a-entity id="whitevoice" geometry="primitive: plane" material="visible:false" position="10 0 -5"
