--- a/indoor.html
+++ b/indoor.html
@@ -48,7 +48,7 @@
             material="color: #DDDDDD; shader: flat; visible: false"> </a-entity>
         <!--<a-link href="nighttime.html" title="click"></a-link>-->
         <a-box box-item color="#FFAA00" event-set__down="_event: mousedown; color: #FF1100" position="0 1.8 -1"
-            size="10" material="visible: false"></a-box>
+            height="0.3" width="0.3" material="visible: false"></a-box>
         <a-entity id="indoorsound" geometry="primitive: plane" position="-10 0 0"
             sound="src: assets/indoor4soundscape.mp3; autoplay: true; loop: true;"></a-entity>
         <a-entity id="indoorvoice" geometry="primitive: plane" material="visible:false" position="10 0 -5"
